--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,7 +1,11 @@
-/* AppComponent's private CSS styles */
 h1 {
   margin-bottom: 0;
 }
+
+a {
+  margin: 1em;
+}
+
 nav a {
   padding: 1rem;
   text-decoration: none;
