--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,8 @@
-html {
-  max-width: 1280px;
+body {
+  max-width: 1000px;
+  margin: auto;
+  padding: 2em;
 }
-
 h1 {
   color: #369;
   font-family: Arial, Helvetica, sans-serif;
@@ -12,12 +13,8 @@ h2, h3 {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: lighter;
 }
-body {
-  margin: 2em;
-}
 body, input[type="text"], button {
   color: #333;
-  font-family: Cambria, Georgia, serif;
 }
 button {
   background-color: #eee;
